# wger-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MCP-READ-TEST-PLAN.md  MCP-READ-TEST-REVIEW.md  README.md  compose.example.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api-keys.md
scripts/: get_token.py
src/wger_mcp/: config.py  server.py  wger_client.py
src/wger_mcp/auth/: __init__.py  api_key.py  base.py  jwt.py  proxy_header.py
src/wger_mcp/tools/: analytics.py  exercises.py  nutrition.py  routines.py  workout_logs.py
tests/: conftest.py  test_auth_api_key.py  test_auth_jwt.py  test_auth_proxy_header.py  test_wger_client.py
