[project]
name = "wger-mcp"
version = "0.1.0"
description = "MCP server exposing the wger fitness/nutrition REST API as tools, with pluggable auth"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "joserfc>=1.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
wger-mcp = "wger_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wger_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
